--- a/registration/templates/base.html
+++ b/registration/templates/base.html
@@ -25,10 +25,10 @@
           <a href="{% url 'home' %}">home</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'register' %}">register</a>
+          <a style="text-decoration: none" href="{% url 'register' %}">register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">login</a>
+          <a href="{% url 'login' %}"'>login </a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
