--- a/registration/templates/login.html
+++ b/registration/templates/login.html
@@ -1,4 +1,59 @@
 {% extends 'base.html' %}
+{% block head %}
+    <style>
+    .login-container
+        {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+
+
+
+            height: 100vh;
+        }
+        .login-container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+        .login-container h2 {
+            text-align: center;
+        }
+        .login-container input[type="text"],
+        .login-container input[type="password"],
+        .login-container input[type="submit"] {
+            width: 100%;
+            padding: 10px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            box-sizing: border-box;
+        }
+        .login-container input[type="submit"] {
+            background-color: #007bff;
+            color: #fff;
+            cursor: pointer;
+        }
+        .login-container input[type="submit"]:hover {
+            background-color: #0056b3;
+        }
+    </style>
+{% endblock %}
 {% block content %}
-   <h1>this is my login page</h1>
+<div>
+    <div style="float: left" class="login-container">
+        <h2>Login</h2>
+        <form action="#" method="post">
+            <input type="text" name="username" placeholder="Username" required>
+            <input type="password" name="password" placeholder="Password" required>
+            <input type="submit" value="Login">
+        </form>
+    </div>
+    <div style="float: left">
+        <img width="500" height="480" src="https://www.48hourslogo.com/oss/works/2022/03/07/205549129546/116671_82300_f3975082-b193-48c4-a654-a2ceb114e1ac.jpg">
+    </div>
+</div>
 {% endblock %}
