--- a/registration/templates/base.html
+++ b/registration/templates/base.html
@@ -5,47 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>
-        {% block title %}
-           default title
-        {% endblock %}
-    </title>
+   {% block head %}
+   {% endblock %}
 </head>
 <body>
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<nav style=" color:dimgray;text-decoration: none" class="navbar navbar-expand-sm bg-dark navbar-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Logo</a>
+    <a class="navbar-brand" href="#">CARLIX</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a href="{% url 'home' %}">home</a>
+          <a style="padding-left:10px;color:dimgray;text-decoration: none" href="{% url 'home' %}">home</a>
         </li>
         <li class="nav-item">
-          <a style="text-decoration: none" href="{% url 'register' %}">register</a>
+          <a style="padding-left:10px;color:dimgray;text-decoration: none" href="{% url 'register' %}">register</a>
         </li>
         <li class="nav-item">
-          <a href="{% url 'login' %}"'>login </a>
+          <a style="padding-left:10px;color:dimgray;text-decoration: none" href="{% url 'login' %}">login </a>
         </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Link</a></li>
-            <li><a class="dropdown-item" href="#">Another link</a></li>
-            <li><a class="dropdown-item" href="#">A third link</a></li>
-          </ul>
+         <li class="nav-item">
+           <a style="padding-left:10px;color:dimgray;text-decoration: none" href="{% url 'About us' %}">About us</a>
         </li>
       </ul>
-    </div>
+  </div>
   </div>
 </nav>
 
 
 
-<h1 style="color: green">This is my common message</h1>
+
 
       <header>
           {% block header %}
@@ -57,12 +49,12 @@
       </header>
       <main>
           {% block content %}
-             <p>my content</p>
+
           {% endblock %}
       </main>
       <footer>
           {% block footer %}
-          <p>2024 my site</p>
+
           {% endblock %}
       </footer>
 
