--- a/registration/templates/home.html
+++ b/registration/templates/home.html
@@ -1,4 +1,46 @@
-{% extends 'base.html' %}
-{% block content %}
-   <h1>this is my home page</h1>
+{% extends "base.html" %}
+{% block head %}
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha3
+    84-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 {% endblock %}
+{% block content %}
+
+<div id="carouselExampleIndicators" class="container carousel slide " data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="  container-fluid col-md-12 carousel-inner ">
+    <div class="  carousel-item active">
+      <img style="height: 700px" class="  d-block w-100" src="https://cdn.jdpower.com/Average%20Weight%20Of%20A%20Car.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img style="height: 800px" class="d-block w-100" src="https://www.usnews.com/cmsmedia/f5/4b/efa92f4c4dcebb2af996dfc4c01f/2023-lucid-air-1.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img style="height: 800px" class="d-block w-100" src="https://images.hindustantimes.com/auto/img/2021/10/14/1600x900/Lexus_LX_600_1634190574862_1634190581465.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+<div>
+  <h1 style="text-align: center;color: darkslategray">Seamless Driving,Seamless Booking</h1>
+</div>
+
+
+{% endblock %}
+
+-- Bootstrap JS and jQuery -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
