--- a/registration/templates/register.html
+++ b/registration/templates/register.html
@@ -1,4 +1,87 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block head %}
+<style>
+        .container {
+            max-width: 400px;
+            margin: 50px auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            text-align: center;
+        }
+
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        input[type="confirm password"]{
+            width: 100%;
+            padding: 10px;
+            margin: 8px 0;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+
+        input[type="submit"] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        input[type="submit"]:hover {
+            background-color: #45a049;
+        }
+
+        .terms {
+            margin-top: 16px;
+            font-size: 12px;
+        }
+
+        .terms a {
+            color: blue;
+        }
+
+        .terms a:hover {
+            text-decoration: underline;
+        }
+    </style>
+{% endblock %}
 {% block content %}
-   <h1>this is my register page</h1>
+ <div class="container">
+        <h2>Registration Form</h2>
+        <form method="POST" action="/addregister">
+            {% csrf_token %}
+            <label for="username">Username</label>
+            <input type="text" id="username" name="username" required>
+
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required>
+
+
+            <label for="confirm password">confirm password</label>
+            <input type="confirm password" id="confirm password" name="confirm password" required>
+
+
+
+            <input type="submit" value="Register">
+
+            <div class="terms">
+                By registering, you agree to our <a href="#">Terms & Conditions</a>.
+            </div>
+        </form>
+    </div>
+
 {% endblock %}
